manifests/qdrant/netpol.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: qdrant
  namespace: qdrant
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: qdrant
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: memory
            io.kubernetes.pod.namespace: memory
      toPorts:
        - ports:
            - port: "6333"
              protocol: TCP
            - port: "6334"
              protocol: TCP
